fix ktlint run